# BEP

./: CMakeLists.txt  Iter_Block_Jacobi.cpp  New_Block_Jacobi.cpp  README.md  Team_Block_Jacobi.cpp
src/: Block_Jacobi.cpp  CMakeLists.txt  Jacobi.cpp
